--- a/index.html
+++ b/index.html
@@ -11,19 +11,37 @@
         <p>Setup</p>
         <nav>
             <ol>
-                <li>Google Chrome</li>
-                <li>Visual Studio Code</li>
-                <li>Figma</li>
-                <li>Github</li>
+                <li>
+                    <a href="#google-chrome">
+                         Google Chrome
+                    </a>
+                </li>
+                <li>
+                    <a href="#vsc">Visual Studio Code</a>
+                </li>
+                <li>
+                    <a href="#figma">Figma</a>  
+                </li>
+                <li><a href="#github">Github</a></li>
             </ol>
             <p>Conceptos esenciales del Desarrollo Web</p>
             <ol>
-                <li>Que es HTML</li>
-                <li>Etiquetas</li>
-                <li>DOM</li>
-                <li>Sematica</li>
-                <li>Atriutos</li>
-                <li>Que es CSS</li>
+                <li>
+                   <a href="#que-es-html">Que es HTML</a> 
+                </li>
+                <li>
+                   <a href="#etiquetas">Etiquetas</a> 
+                </li>
+                <li>
+                   <a href="#doom">DOOM</a>
+                </li>
+                <li>
+                    <a href="#semantica">Semantica</a> </li>
+                <li>
+                    <a href="#atributos">Atributos</a></li>
+                <li>
+                    <a href="#css">Que es CSS</a> 
+                </li>
             </ol>
         </nav>
     </header>
@@ -39,7 +57,7 @@
         Setup
     </h2>
     <img src="/images/google-chrome.png" alt="Logo de Google Chrom" title="Logo de Google Chrome">
-    <h3>
+    <h3 id="google-chrome">
         Google Chrome
     </h3>
     <p>
@@ -47,7 +65,7 @@
         herramientas de desarrollo avanzadas y de amigable uso.
     </p>
     <img src="/images/visual-studio-code.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code">
-    <h3>
+    <h3 id="vsc">
         Visual Studio Code
     </h3>
     <p>
@@ -55,7 +73,7 @@
          lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.
     </p>
 <img src="/images/Figma.png" alt="Logo de Figma" title="Logo de Figma">
-<h3>
+<h3 id="figma">
     Figma
 </h3>
 <p>
@@ -63,7 +81,7 @@
     los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.
 </p>
 <img src="/images/GitHub.png" alt="Logo de Github" title="Logo de Github">
-<h3>
+<h3 id="github">
     GitHub
 </h3>
 <p>
@@ -73,10 +91,10 @@
 </p>
 <hr>
 <h2>Conceptos esenciales del Desarrollo Web</h2>
-<h3>Qué es HTML</h3>
+<h3 id="que-es-html">Qué es HTML</h3>
 <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto.
      Es el componente más básico de la web. Define el significado y la estructura del contenido.</p>
-<h3>Etiquetas</h3>
+<h3 id="etiquetas">Etiquetas</h3>
 <p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de 
     nuestro website y cada una tiene características y usos diferentes aunque visualmente den un resultado similar.</p>
 <p>
@@ -84,20 +102,20 @@
     aquí es donde la semántica será la respuesta y si sabemos un poco de inglés también podremos darnos una pequeña idea de su uso 
     pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como Software Developer.
 </p>
-<h3>DOM</h3>
+<h3 id="doom">DOM</h3>
 El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol genealógico fuera:
  padres, hijos, hermanos con niveles infinitos.
  cuando entendemos esta anidación podemos identificar dependencias, herencias en css y que tan complejo es nuestro proyecto.
  <img src="/images/dom.png" alt="Estructura de arbol que represeta al Doom">
-<h3>Semántica</h3>
+<h3 id="semantica">Semántica</h3>
 <p>La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos
      y no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán
       más relevantes que otras, esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido,
        categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También 
     ayudará a la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.</p>
-<h3>Atributos</h3>
+<h3 id="atributos">Atributos</h3>
 <p>Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos funcionan en solo alguna etiquetas como src</p>
-<h3>CSS</h3>
+<h3 id="css">Que es CSS?</h3>
 <p>Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir la presentación de documentos HTML</p>
 <img src="/images/image 5.png" alt="">
 <h2 style="font-weight:bold">Modelo de caja</h2>
@@ -118,5 +136,6 @@ El Document Object Model es una estructura de árbol que representará todos nue
 </ul>
 <h3>Modelo de Caja</h3>
 <img src="/images/Rectangle 56.png" alt="">
+<a href="https://leonidasesteban.com" target="_blanck">pagina web de leo</a>
 </body>
 </html>
